@@ -1,3 +1,6 @@
+Version 2009122001
++ Remove Kwalitee tests
+
 Version 2009110901
 + Added POD Coverage & Kwalitee tests
 
